--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,8 +5,8 @@
 @import "normalize";
 
 // Import fonts from Google
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
-@import url(http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic,700italic);
+@import url(http:////fonts.useso.com/css?family=Open+Sans:300,400,800);
+@import url(http:////fonts.useso.com/css?family=PT+Serif:400,700,400italic,700italic);
 
 // Site configuration
 @import "config"; 
@@ -24,6 +24,17 @@
 
 // Mobile up base styles
 @import "breakpoints/mobileup";
+
+
+.post ol{
+    padding-left:20px;
+    li p{
+        margin:0 0px 2rem 10px;
+        width: 100%;
+        width: calc(100% - 20px);
+    }
+}
+
 
 // Import media queries add more as you desire
 @media only screen and (min-width: 800px) { @import "breakpoints/800up";} 
