--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
- <div class="header">
+ <a href="{{ site.baseurl }}/" class="header">
+    <div class="headerBg"><img src="{{ '/assets/img/banner_1.jpg' | prepend: site.baseurl }}" alt=""></div>
      <div class="container">
-         <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+         <!-- <h1 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h1> -->
          <nav class="nav-collapse">
              <ul class="noList">
                  {% for link in site.navigation %}{% assign current = nil %}{% if page.url contains link.url %}{% assign current = 'current' %}{% endif %}
@@ -11,4 +12,4 @@
              </ul>
          </nav>
      </div>
- </div><!-- end .header -->
+ </a><!-- end .header -->
