--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -34,7 +34,26 @@
         width: calc(100% - 20px);
     }
 }
-
+.header{
+    display: block;
+    overflow: hidden;
+    .headerBg{
+        position: absolute;
+        left:0;
+        top:0;
+        width: 100%;
+        height: 100%;
+        img{
+            -webkit-transform: translate(0,-33.33%);
+           -moz-transform: translate(0,-33.33%);
+            -ms-transform: translate(0,-33.33%);
+             -o-transform: translate(0,-33.33%);
+                transform: translate(0,-33.33%);
+            width: 100%;
+            // height: 100%;
+        }
+    }
+}
 
 // Import media queries add more as you desire
 @media only screen and (min-width: 800px) { @import "breakpoints/800up";} 
