--- a/assets/scss/breakpoints/_800up.scss
+++ b/assets/scss/breakpoints/_800up.scss
@@ -204,11 +204,11 @@ FOOTER STYLES
 
 .footer {
 	&-links {
-		float: right;
+		// float: right;
 	}
 
 	.copy {
-		float: left;
+		// float: left;
 	}
 
 	.container {
