--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -381,7 +381,7 @@ FOOTER STYLING
 	padding: 2rem 0;
 
 	.container {
-		border-top: 4px solid darken(white, 15%);
+		border-top: 2px solid darken(white, 15%);
 		padding-top: .5em;
 		@include container(90%);
 	}
@@ -400,7 +400,7 @@ FOOTER STYLING
 
 			li {
 				display: inline-block;
-
+				margin:0 16px;
 				a {
 					display: inline-block;
 					width: 30px;
