--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -5,8 +5,36 @@
 @import "normalize";
 
 // Import fonts from Google
-@import url(http:////fonts.useso.com/css?family=Open+Sans:300,400,800);
-@import url(http:////fonts.useso.com/css?family=PT+Serif:400,700,400italic,700italic);
+
+//@import url(http:////fonts.useso.com/css?family=Open+Sans:300,400,800);
+//@import url(http:////fonts.useso.com/css?family=PT+Serif:400,700,400italic,700italic);
+@charset "utf-8";
+
+
+
+// Our variables
+$base-font-family: Helvetica, Arial, sans-serif;
+$base-font-size:   16px;
+$small-font-size:  $base-font-size * 0.875;
+$base-line-height: 1.5;
+
+$spacing-unit:     30px;
+
+$text-color:       #111;
+$background-color: #fdfdfd;
+$brand-color:      #2a7ae2;
+
+$grey-color:       #828282;
+$grey-color-light: lighten($grey-color, 40%);
+$grey-color-dark:  darken($grey-color, 25%);
+
+// Width of the content area
+$content-width:    800px;
+
+$on-palm:          600px;
+$on-laptop:        800px;
+
+
 
 // Site configuration
 @import "config"; 
@@ -22,6 +50,7 @@
 @import "partials/mixins";
 @import "partials/grid";
 
+
 // Mobile up base styles
 @import "breakpoints/mobileup";
 
@@ -34,6 +63,7 @@
         width: calc(100% - 20px);
     }
 }
+
 .header{
     display: block;
     overflow: hidden;
