--- a/assets/scss/breakpoints/_800up.scss
+++ b/assets/scss/breakpoints/_800up.scss
@@ -2,29 +2,29 @@
 GLOBAL STYLES
 ***************/
 
-.content {
-	padding-top: 0;
-	position: relative;
-	z-index: 1;
+// .content {
+// 	padding-top: 0;
+// 	position: relative;
+// 	z-index: 1;
 
-	&:after {
-		z-index: -1; 
-		background: white;
-		content: ""; 
-		display: block;
-		width: 100%;
-		height: 5em;
-		position: absolute;
-		top: -2em;
-		left: 0;
-		-webkit-transform: skewY(-2deg);
-		-ms-transform: skewY(-2deg);
-		transform: skewY(-2deg);
-		-webkit-transform-origin: bottom left;
-		-ms-transform-origin: bottom left;
-		transform-origin: bottom left; 
-	}
-}
+// 	&:after {
+// 		z-index: -1; 
+// 		background: white;
+// 		content: ""; 
+// 		display: block;
+// 		width: 100%;
+// 		height: 5em;
+// 		position: absolute;
+// 		top: -2em;
+// 		left: 0;
+// 		-webkit-transform: skewY(-2deg);
+// 		-ms-transform: skewY(-2deg);
+// 		transform: skewY(-2deg);
+// 		-webkit-transform-origin: bottom left;
+// 		-ms-transform-origin: bottom left;
+// 		transform-origin: bottom left; 
+// 	}
+// }
 
 .container {
 	@include container(800px); 
@@ -38,13 +38,13 @@ HOMEPAGE STYLING
 
 #home {
 	.posts, .pageTitle, .pagination {
-		@include span(9 of 12);
-		float: none;
-		margin: 0 auto 1.5em;
+		// @include span(9 of 12);
+		// float: none;
+		// margin: 0 auto 1.5em;
 	}
 
 	.pageTitle {
-		margin: 2rem auto 1em;
+		// margin: 2rem auto 1em;
 	}
 }
 
@@ -53,59 +53,59 @@ HOMEPAGE STYLING
 HEADER STYLING
 ***************/
 
-.header {
-	height: 15em;
-	position: relative;
-	padding-bottom: 2em;
+// .header {
+// 	height: 15em;
+// 	position: relative;
+// 	padding-bottom: 2em;
 
-	.container {
-		position: relative;
-		top: 50%;
-		-webkit-transform: translateY(-50%);
-		-ms-transform: translateY(-50%);
-		transform: translateY(-50%);
-		@include container(800px); 
-	}
+// 	.container {
+// 		position: relative;
+// 		top: 50%;
+// 		-webkit-transform: translateY(-50%);
+// 		-ms-transform: translateY(-50%);
+// 		transform: translateY(-50%);
+// 		@include container(800px); 
+// 	}
 
-	h1 {
-		font-size: 3em;
-		line-height: 1;
-		letter-spacing: -3px;
-		padding-left: 0;
-	}
+// 	h1 {
+// 		font-size: 3em;
+// 		line-height: 1;
+// 		letter-spacing: -3px;
+// 		padding-left: 0;
+// 	}
 
-	nav {
-		float: left;
-		clear: left;
+// 	nav {
+// 		float: left;
+// 		clear: left;
 
-		ul {
-			margin: 0;
-			li {
-				display: inline;
-				line-height: 3em;
-				background: none;
-				padding: 0 5px;
-				border: none;
+// 		ul {
+// 			margin: 0;
+// 			li {
+// 				display: inline;
+// 				line-height: 3em;
+// 				background: none;
+// 				padding: 0 5px;
+// 				border: none;
 
-				a {
-					color: white;
-					font-size: .9em;
-					text-decoration: none;
-					padding: 0 .25em;
+// 				a {
+// 					color: white;
+// 					font-size: .9em;
+// 					text-decoration: none;
+// 					padding: 0 .25em;
 
-					&:hover {
-						color: darken(white, 20%);
-					}
-				}
+// 					&:hover {
+// 						color: darken(white, 20%);
+// 					}
+// 				}
 
-				&.current {
-					padding-bottom: .25em;
-					border-bottom: 4px solid rgba(255,255,255,.4); 
-				}
-			}
-		}
-	}
-}
+// 				&.current {
+// 					padding-bottom: .25em;
+// 					border-bottom: 4px solid rgba(255,255,255,.4); 
+// 				}
+// 			}
+// 		}
+// 	}
+// }
 
 
 /***************
