--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -17,7 +17,7 @@ body {
 	color: $black;
 	overflow-x: hidden;
 
-	p , ul {
+	p  {
 		margin: 0 0 2rem;
 	}
 }
@@ -138,6 +138,7 @@ LIST STYLING
 	list-style:none;
 	padding-left:0;
 	margin-left:0;
+	display: block;
 }
 
 dt {
@@ -161,8 +162,10 @@ PAGE STYLES
 ***************/
 
 .pageTitle {
-	margin: 2rem auto 1em;
-	text-align: center;
+	text-align: left;
+	// float:left;
+	// flex: 1;
+	display: inline-block;
 }
 
 .content {
@@ -173,36 +176,84 @@ PAGE STYLES
 /***************
 HEADER STYLING
 ***************/
-
-.header {
-	background-color: $primary-color;
-	// background-image: url('../img/banner_1.jpg');
-	background-size: cover;
-	background-position: center center;
-	color: white;
-	padding: 0;
-	height: 3em;
-	.container {
-		padding: 0;
-		@include container(100%);
-	}
-
-	h1 {
-		margin: 0;
-		float: left;
-		padding-left: 2rem;
-		font-size: 1em;
-		line-height: 3em;
-		font-family: $sans-serif;
-		font-weight: 800;
-		text-transform: uppercase;
-
-		a {
-			color: white;
-			text-decoration: none;
+.header{
+	display: flex;
+	margin: 2rem auto 1em;
+}
+.media-links {
+	flex: 1;
+	display: flex;
+	// vertical-align: bottom;
+	justify-content: flex-end;
+	align-items: flex-end;
+	ul {
+		text-align: right;
+		li {
+			display: inline-block;
+			margin: 0 8px;
+			filter: grayscale(1);
+			transition: filter 0.4s 0s;
+			a {
+				display: inline-block;
+				width: 30px;
+				height: 30px;
+				// @include transition(all 0.2s ease-in-out);
+				svg {
+					display: block;
+					width: 100%;
+					height: 100%;
+				}
+			}
+			&:hover {
+				filter:grayscale(0);
+				a {
+					svg {
+						animation : icons 0.8s 0s both;
+					}
+				}
+			}
 		}
 	}
 }
+
+@keyframes icons {
+    0% { 
+    	transform : scale(1);
+    }
+    100% {
+    	transform : scale(1.1);
+    }
+}
+
+// .header {
+// 	background-color: $primary-color;
+// 	// background-image: url('../img/banner_1.jpg');
+// 	background-size: cover;
+// 	background-position: center center;
+// 	color: white;
+// 	padding: 0;
+// 	height: 3em;
+// 	.container {
+// 		padding: 0;
+// 		@include container(100%);
+// 	}
+
+// 	h1 {
+// 		margin: 0;
+// 		float: left;
+// 		padding-left: 2rem;
+// 		font-size: 1em;
+// 		line-height: 3em;
+// 		font-family: $sans-serif;
+// 		font-weight: 800;
+// 		text-transform: uppercase;
+
+// 		a {
+// 			color: white;
+// 			text-decoration: none;
+// 		}
+// 	}
+// }
 
 
 /***************
@@ -377,22 +428,22 @@ FOOTER STYLING
 ***************/
 
 .footer {
-	text-align: center;
-	padding: 2rem 0;
+	// text-align: center;
+	// padding: 2rem 0;
 
-	.container {
-		border-top: 2px solid darken(white, 15%);
-		padding-top: .5em;
-		@include container(90%);
-	}
+	// .container {
+	// 	border-top: 2px solid darken(white, 15%);
+	// 	padding-top: .5em;
+	// 	@include container(90%);
+	// }
 
-	.copy, .footer-links {
-		font-size: .8em;
-	}
+	// .copy, .footer-links {
+	// 	font-size: .8em;
+	// }
 
-	.copy {
-		margin-bottom: 1rem;
-	}
+	// .copy {
+	// 	margin-bottom: 1rem;
+	// }
 
 	&-links {
 		ul {
