--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
 <!-- Add jQuery and other scripts -->
-<script src="//upcdn.b0.upaiyun.com/libs/jquery/jquery-1.10.2.min.js"></script>
+<script src="//libs.baidu.com/jquery/1.10.2/jquery.js"></script>
 <script>window.jQuery || document.write('<script src="{{ \'/assets/js/jquery-1.11.2.min.js\' | prepend: site.baseurl }}"><\/script>')</script>
 <script src="{{ '/assets/js/dropcap.min.js' | prepend: site.baseurl }}"></script>
 <script src="{{ '/assets/js/scripts.js' | prepend: site.baseurl }}"></script>
