--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -303,6 +303,7 @@ POST STYLING
 		color: lighten(black, 50%);
 		font-family: $sans-serif;
 		font-weight: 300;
+		margin-bottom: 100px;
 	}
 
 	figure {
@@ -354,7 +355,8 @@ POST NAV STYLING
 	border-top: 1px solid darken(white, 10%);
 	border-bottom: 1px solid darken(white, 10%);
 	overflow: hidden;
-
+	margin-top: 50px;
+	
 	.prev, .next {
 		display: block;
 		width: 100%;
