--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -112,5 +112,9 @@ $on-laptop:        800px;
 
 
 #disqus_thread{
-    margin-top: 50px;
+    margin-top: 100px;
+    padding-top: 20px;
+    border-top:1px solid #e6e6e6;
 }
+
+
