--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -118,3 +118,10 @@ $on-laptop:        800px;
 }
 
 
+code.highlighter-rouge{
+    background: #555;
+    color: #fff;
+    padding: 2px 4px;
+    margin: 0 4px;
+    border-radius: 4px;
+}
